[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sdflit"
description = "Fast and Robust Signed Distance Function Library"
authors = [{ name = "yzx9", email = "yuan.zx@outlook.com" }]
readme = "README.md"
keywords = ["sdf", "pyo3"]
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/yzx9/sdflit"

[tool.maturin]
features = ["pyo3/extension-module"]
